# conduit

./: .clinerules  .gitignore  Cargo.toml  README.md  build.rs
config/: conduit.toml
docs/: architecture.md  llm-context.md
migrations/: 001_create_registry.sql
proto/: tunnel.proto
src/: lib.rs  main.rs
src/cli/: mod.rs
src/cli/commands/: config.rs  down.rs  init.rs  kill.rs  list.rs  mod.rs  router.rs  start.rs  status.rs  up.rs  version.rs
src/client/: config.rs  connection.rs  mod.rs  tunnel.rs
src/common/: config.rs  error.rs  mod.rs  types.rs
src/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src/protocol/: codec.rs  handler.rs  messages.rs  mod.rs
src/registry/: manager.rs  mod.rs  models.rs  sqlite.rs
src/router/: mod.rs
src/security/: auth.rs  crypto.rs  keys.rs  mod.rs  tls.rs
tests/: protocol_test.rs
